styles/valmarino-app.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
@font-face {
  src: url(fonts/shallota.ttf);
  font-family: shallota;
  src: url(fonts/univers-light.ttf);
  font-family: univers;
}
@font-face {
  src: url(fonts/univers-light.ttf);
  font-family: univers;
}
.flex-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
body {
  margin: 0%;
  background-color: white;
  background-size: cover;
  background-repeat: no-repeat;
}
nav {
  position: relative;
  background: transparent;
  justify-content: space-between;
  border-bottom: 1px solid;
}
#bgvideo {
  position: fixed;
  min-height: 100%;
  min-width: 100%;
  z-index: -2;
}
a {
  text-decoration: none;
}

.container-fluid {
  max-height: 90px;
  text-align: center;
  flex-direction: row;
}
a.nav-logo.active {
  font-family: shallota;
  font-size: 65px;
  color: rgb(4, 6, 8);
  text-decoration: none;
  max-height: 80px;
}
.nav-items {
  list-style-type: none;
  margin: 0;
}
.nav-links {
  padding: 1.3rem 1rem;
  font-size: 20px;
  color: rgb(4, 6, 8);
  text-decoration: none;
  font-family: univers;
  font-weight: 200;
  justify-content: flex-end;
}
.navbar-nav {
  justify-content: flex-end;
}
.nav-links a:hover {
  color: #cccccc;
}
.custom-toggler {
  border-color: black;
}
/* Setting the stroke to green using rgb values (0, 128, 0) */

.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}
.projects {
  display: inline-flex;
  flex-direction: row;
  justify-content: space-between;
}
.project {
  text-decoration: none;
  color: rgb(66, 66, 66);
  margin-left: 30px;
  margin-right: 30px;
  margin-top: 10px;
  margin-bottom: 10px;
}
.project:hover {
  color: rgb(0, 247, 255);
}

.container-fluid-content {
  justify-content: center;
  flex-direction: column;
}
.row {
  margin-top: 20px;
  width: 100%;
  align-items: center;
  height: fit-content;
}
.col {
  width: min-content;
}
h1 {
  text-align: center;
  font-family: shallota;
  font-size: 100px;
  height: 30px;
  line-height: 0.2;
  margin-left: 15px;
  margin-right: 15px;
}
.subtitle {
  font-size: 13px;
  font-family: univers;
  text-align: center;
  position: relative;
  text-align: center;
  margin: 0;
  bottom: -24px;
  font-weight: 100;
}
.about-description {
  font-size: 14px;
  padding-top: 50px;
}

.vertical-center {
  /* Fallback for browsers do NOT support vh unit */
  min-height: 85vh; /* These two lines are counted as one :-)       */

  display: flex;
  align-items: center;
}

.images-menu {
  position: absolute;
  text-align: center;
  display: none;
  z-index: -1;
  top: 50%;
  left: 50%;
  bottom: -200px;
  transform: translate(-50%, -50%);
  max-height: 300px;
  width: auto;
  box-shadow: 0 5px 15px rgba(40, 39, 39, 0.5);
}
#profile-img {
  max-width: 300px;
  height: auto;
  border-radius: 50%;
}

@media (max-width: 600px) {
  a.nav-logo.active {
    font-size: 50px;
    width: 50%;
    line-height: 0.8;
    height: 70px;
    padding-bottom: 20px;
  }
  .navbar-pad {
    border: none;
    height: 70px;
  }
}
@media (max-width: 800px) {
  .images-menu {
    display: none;
  }
  h1 {
    height: 2px;
    line-height: 0.5;
  }
  a.nav-logo.active {
    padding-top: 10px;
  }
  .navbar-bar {
    margin-bottom: 70px;
    margin-top: 20px;
  }
  .container-fluid-content {
    margin-bottom: 70px;
    padding-top: 200px;
  }
}

